@@ -54,3 +54,7 @@ HibernateController.noPersistenceUnitName=Missing Persitence-Unit name .\nChange
 
 HibernatePanel.toObtainSessionFactJPA=Call "javax.persistence.Persistence.createEntityManagerFactory("<persitence-unit name>");"
 HibernatePanel.toObtainSessionFactPersUnit=persitence-unit name:
+
+HibernatePanel.moveUp=Move up
+HibernatePanel.moveDown=Move down
+
