@@ -6,6 +6,10 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements:
 
+Hibernate Plugin:
+  The Classpath configuration now allows to move entries up or down. 
+
+
 New plugin for Netezza NPS database server.  This plugin allows for viewing source and details of Views, 
 Stored Procedures, and synonyms.  It also provides the ability to execute stored procedures in the SQL Editor.
 See Help for screenshots and more details.
